--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-  <!-- Section 1: Introduction -->
-  <section id="introduction">
+<!-- Section 1: Introduction -->
+<section id="introduction">
+  <div class="intro-container">
     <img src="your-photo.jpg" alt="My Photo" class="profile-pic">
     <ul>
       <li>Passionate developer with a love for clean code</li>
@@ -18,19 +19,29 @@
       <li>Always learning new technologies</li>
       <li>Enjoys collaborating with others</li>
     </ul>
-  </section>
+  </div>
+</section>
 
-  <!-- Section 2: Skills -->
-  <section id="skills">
-    <h2>My Skills</h2>
-    <div class="skills-grid">
-      <div><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
-      <div><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
-      <div><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
-      <div><img src="react-logo.png" alt="React"><p>React</p></div>
-      <div><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
+<!-- Section 2: Skills -->
+<section id="skills">
+  <h2>My Skills</h2>
+  <div class="skills-carousel">
+    <div class="skills-track">
+      <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
+      <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
+      <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
+      <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
+      <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
+      <!-- Duplicate for smooth loop -->
+      <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
+      <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
+      <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
+      <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
+      <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Section 3: Projects -->
   <section id="projects">
