--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
       <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
       <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
-      <!-- Duplicate for smooth loop -->
+
+      <!-- Duplicate set for seamless looping -->
       <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
       <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
       <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
