--- a/index.html
+++ b/index.html
@@ -1,52 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Portfolio</title>
 
-  <!-- ✅ Add Roboto font from Google Fonts -->
+  <!-- Google Font: Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
+  <!-- External CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<!-- Section 1: Introduction -->
-<section id="introduction">
-  <div class="intro-container">
-    <img src="your-photo.jpg" alt="My Photo" class="profile-pic">
-    <ul>
-      <li>Passionate developer with a love for clean code</li>
-      <li>Based in [Your City]</li>
-      <li>Strong problem-solving skills</li>
-      <li>Always learning new technologies</li>
-      <li>Enjoys collaborating with others</li>
-    </ul>
-  </div>
-</section>
-
-<!-- Section 2: Skills -->
-<section id="skills">
-  <h2>My Skills</h2>
-  <div class="skills-carousel">
-    <div class="skills-track">
-      <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
-      <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
-      <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
-      <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
-      <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
-
-      <!-- Duplicate set for seamless looping -->
-      <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
-      <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
-      <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
-      <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
-      <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
+  <!-- Section 1: Introduction -->
+  <section id="introduction">
+    <div class="intro-container">
+      <img src="your-photo.jpg" alt="My Photo" class="profile-pic">
+      <ul>
+        <li>Passionate developer with a love for clean code</li>
+        <li>Based in [Your City]</li>
+        <li>Strong problem-solving skills</li>
+        <li>Always learning new technologies</li>
+        <li>Enjoys collaborating with others</li>
+      </ul>
     </div>
-  </div>
-</section>
+  </section>
 
+  <!-- Section 2: Skills -->
+  <section id="skills">
+    <h2>My Skills</h2>
+    <div class="skills-carousel">
+      <div class="skills-track">
+        <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
+        <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
+        <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
+        <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
+        <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
+      </div>
+    </div>
+  </section>
 
   <!-- Section 3: Projects -->
   <section id="projects">
