--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <!-- Google Font: Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
+  <!-- External CSS -->
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
