--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <!-- Google Font: Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
   <!-- External CSS -->
   <link rel="stylesheet" href="styles.css">
-
 </head>
 <body>
 
@@ -28,27 +28,16 @@
   </section>
 
   <!-- Section 2: Skills -->
-<section id="skills">
-  <h2>My Skills</h2>
-  <div class="skills-carousel">
-    <div class="skills-track">
-      <!-- Original Skills -->
-      <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
-      <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
-      <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
-      <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
-      <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
-
-      <!-- Duplicate for seamless scroll -->
+  <section id="skills">
+    <h2>My Skills</h2>
+    <div class="skills-list">
       <div class="skill"><img src="html-logo.png" alt="HTML"><p>HTML</p></div>
       <div class="skill"><img src="css-logo.png" alt="CSS"><p>CSS</p></div>
       <div class="skill"><img src="js-logo.png" alt="JavaScript"><p>JavaScript</p></div>
       <div class="skill"><img src="react-logo.png" alt="React"><p>React</p></div>
       <div class="skill"><img src="node-logo.png" alt="Node.js"><p>Node.js</p></div>
     </div>
-  </div>
-</section>
-
+  </section>
 
   <!-- Section 3: Projects -->
   <section id="projects">
