--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Section 4: Contact -->
   <section id="contact">
     <h2>Contact Me</h2>
-    <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+    <form action="mailto:brentjohannmorales@gmail.com" method="post" enctype="text/plain">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
 
