--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                     <div class="features-list">
                         <h4>Screenshots</h4>
                         <div class="screenshots-grid">
-                            <img src="assets/images/screenshot.png" alt="Japanese Object Detection Screenshot" class="screenshot-img">
+                            <img src="images/screenshot.png" alt="Japanese Object Detection Screenshot" class="screenshot-img">
                         </div>
                     </div>
 
